<resources>
    <string name="app_name">Fix Fast Buddy 2</string>

    //Google Maps API Key
    <string name="google_maps_api_key">AIzaSyB1Fgdm5-BoI0JBY_3_21nLSwvOjEl802g</string>

    <string name="title_activity_profile_page">ProfilePage</string>

    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="drive_with_confidence">DRIVE WITH CONFIDENCE</string>
    <string name="notifications">Notifications</string>
    <string name="u">Hi User,</string>
    <string name="ongoing_eme">OngoingEmergency Services</string>
    <string name="user">Ajith Bandara</string>
    <string name="inspection_travel"><![CDATA[Inspection & Travel]]></string>
    <string name="profile_name">Nimal Perera</string>
    <string name="pro_pic">pro_pic</string>
    <string name="_4_9">4.9</string>
    <string name="view_profile">View Profile</string>
    <string name="earnings">Earnings</string>
    <string name="ratings_and_reviews">Ratings and Reviews</string>
    <string name="manage_services">Manage Services</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="rs_200">Rs. 200</string>
    <string name="_500m">500m</string>
    <string name="problem">Problem</string>
    <string name="distance">Distance</string>
    <string name="bmw_539_nwb_o2k_1717">BMW - 539\nWB-O2K-1717</string>
    <string name="_94_77_123_4567">+94 77 123 4567</string>
    <string name="decline">Decline</string>
    <string name="tire">Tire</string>
    <string name="accept">Accept</string>
    <string name="ok">Ok</string>
    <string name="vehicle">Vehicle :</string>
    <string name="cancel">Cancel</string>
    <string name="arrived">Arrived</string>
    <string name="end">End</string>
    <string name="service_charge">Service Charge:</string>
    <string name="completed">Complete</string>
    <string name="lkr_2950">Rs. 2950.00</string>
    <string name="inspection_">Inspection Fee:</string>
    <string name="travelling_fee">Travelling Fee:</string>
    <string name="rs_2000">Rs. 2000.00</string>
    <string name="rs_350_00">Rs  .   350.00</string>
    <string name="rs_600_00">Rs  . 600.00</string>
    <string name="total">Total:</string>
    <string name="amt">Amount</string>
    <string name="account_info">Account Info</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_joined">Date Joined</string>
    <string name="total_services_completed">Total Services Completed</string>
    <string name="nimal_perera">Nimal Perera</string>
    <string name="_94_77_123_4008">+94 77 123 4008</string>
    <string name="_29_09_2023">29.09.2023</string>
    <string name="_150">150</string>
    <string name="delete">Delete</string>
    <string name="your_servic">Your Services</string>
    <string name="tire_">Tire</string>
    <string name="locked_out">Locked-out</string>
    <string name="fuel_delivery">Fuel Delivery</string>
    <string name="on_going">On-going</string>
    <string name="complete">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="earning">My Earnings</string>
    <string name="rat_and_rev">Ratings and Reviews</string>
    <string name="tires">Tire</string>
    <string name="engines">Engine</string>
    <string name="jump_start">Jump Start</string>
    <string name="services_provided">Services Provided</string>
    <string name="welcome">Welcome</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_service_provided">serviceProvided</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="address">123-131 Philip Gunawardena Mawatha, Colombo 00400</string>
    <string name="date">2023-10-21</string>
    <string name="time">17:23:29</string>
    <string name="service_id_text">Service ID : </string>
    <string name="_1_1_2023_lkr_2500">1/1/2023 LKR 2500</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="account">Account</string>
    <string name="call_button">Call Button</string>
    <string name="line">line</string>

    <string name="on_going_fragment">On Going Fragment</string>
    <string name="completed_fragment">Completed Fragment</string>
    <string name="cancelled_fragment">Cancelled Fragment</string>
    <string name="back">Back</string>
    <string name="call_button_description">call_button_description</string>
    <string name="ajith_bandara">Ajith Bandara</string>
    <string name="tab_layout_for_navigation">Tab Layout for navigation</string>
    <string name="viewpager_for_tab_content">ViewPager for tab content</string>
    <string name="back_button">back button</string>
    <string name="user_asked_to_cancel">User asked to cancel</string>
    <string name="_1_1_2024">1/1/2024</string>
    <string name="save">Save</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>