<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".mechanic.manageServices">

    <ImageView
        android:id="@+id/backBtn3"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/back_button_circle_shape"
        android:clickable="true"
        android:contentDescription="@string/back_button"
        android:focusable="true"
        android:src="@drawable/profile_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSize,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="744dp"
        android:text="@string/manage_services"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backBtn3" />

    <ImageView
        android:id="@+id/rectangle_"
        android:layout_width="390dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="152dp"
        android:layout_marginBottom="486dp"
        android:background="#3F72AF"
        app:layout_constraintBottom_toTopOf="@+id/EditMS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/your_servic"
        android:layout_width="157dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="168dp"
        android:gravity="center_horizontal|top"
        android:text="@string/your_servic"
        android:textAppearance="@style/your_servic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <ImageView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="317dp"-->
    <!--        android:layout_marginBottom="54dp"-->
    <!--        android:src="@drawable/edit"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        android:id="@+id/editMS"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mngservices_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/EditMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_"
        app:layout_constraintVertical_bias="0.994"
        app:srcCompat="@drawable/edit"
        android:contentDescription="edit button"/>

</androidx.constraintlayout.widget.ConstraintLayout>